<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SSLDroid</string>
    <string name="local_port">Local port</string>
    <string name="remote_host">Remote host</string>
    <string name="remote_port">Remote port</string>
    <string name="cert_file">PKCS12 file</string>
    <string name="cacert_file">CA cert file</string>
    <string name="empty"></string>
    <string name="apply">Apply</string>
    <string name="pkcspass">PKCS12 pass</string>
    <string name="usesni">Use SNI</string>
    <string name="connection_name">Tunnel name</string>
    <string name="add_tunnel">Add tunnel</string>
    <string name="stop_service">Stop service</string>
    <string name="stop_service_for_good">Stop until explicit start</string>
    <string name="start_service">Start service</string>
    <string name="no_tunnels">No tunnels configured yet</string>
    <string name="menu_delete">Delete tunnel</string>
    <string name="key_file_pick">Pick a PKCS12 file from SD card</string>
    <string name="ca_file_pick">Pick a CA cert file from SD card</string>
    <string name="alert_sdcard_absent">No SD card present, please insert one to continue</string>
    <string name="menu_readlogs">Read logs</string>
    <string name="reading_logs">Reading log messages&#8230;</string>
    <string name="menu_provision">Provisioning</string>
    <string name="provision">Please enter the URL for remote XML configuration</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share logs</string>
    <string name="menu_clone">Clone tunnel</string>
</resources>
